@@ -61,6 +61,10 @@ class CiscoUmbrellaManagedOrgParser(ApiParser):
         self.cisco_umbrella_managed_org_secret_key = data["cisco_umbrella_managed_org_secret_key"]
         self.cisco_umbrella_managed_org_customers_id = data["cisco_umbrella_managed_org_customers_id"]
 
+        #Handle data coming from the GUI
+        if isinstance(self.cisco_umbrella_managed_org_customers_id, str):
+            self.cisco_umbrella_managed_org_customers_id = self.cisco_umbrella_managed_org_customers_id.split(",")
+
         self.cisco_umbrella_managed_org_get_proxy = data["cisco_umbrella_managed_org_get_proxy"]
         self.cisco_umbrella_managed_org_get_dns = data["cisco_umbrella_managed_org_get_dns"]
 
@@ -72,7 +76,7 @@ class CiscoUmbrellaManagedOrgParser(ApiParser):
             if "expires_at" in customer_data and not customer_data['expires_at'].tzinfo:
                 customer_data['expires_at'] = timezone.make_aware(customer_data['expires_at'])
 
-    def _execute_query(self, url, query={}, additional_headers={}, auth=None, timeout=30):
+    def _execute_query(self, url: str, query : dict = {}, additional_headers : dict = {}, auth=None, timeout=30) -> dict:
         '''
         raw request doesn't handle the pagination natively
         '''
@@ -90,7 +94,7 @@ class CiscoUmbrellaManagedOrgParser(ApiParser):
 
         return response.json()
 
-    def _update_parent_token(self):
+    def _update_parent_token(self) -> None:
         logger.info(f"[{__parser__}]: Getting a new authentication token...", extra={'frontend': str(self.frontend)})
         try:
             token = self._execute_query(
@@ -118,21 +122,18 @@ class CiscoUmbrellaManagedOrgParser(ApiParser):
                 'cisco_umbrella_managed_org_parent_expires_at'
             ])
 
-    def _get_customers_id(self, timeout=10):
 
+    def _get_customers(self, timeout : int = 10) -> list:
         if not self.cisco_umbrella_managed_org_parent_access_token or not self.cisco_umbrella_managed_org_parent_expires_at or (self.cisco_umbrella_managed_org_parent_expires_at - timedelta(seconds=10) < timezone.now()):
             logger.info(f"[{__parser__}]: Updating main access token...", extra={'frontend': str(self.frontend)})
             self._update_parent_token()
 
         logger.info(f"[{__parser__}]: Getting the list of organisation id", extra={'frontend': str(self.frontend)})
-
         try:
             response = self._execute_query(
-                url=self.ORGANIZATIONS_URL,
-                timeout=timeout,
-                additional_headers={
-                    'Authorization': f"Bearer {self.cisco_umbrella_managed_org_parent_access_token}"
-                },
+                url = self.ORGANIZATIONS_URL,
+                timeout = timeout,
+                additional_headers = {'Authorization': f"Bearer {self.cisco_umbrella_managed_org_parent_access_token}"}
             )
         except requests.HTTPError as e:
             error_code = ""
@@ -141,11 +142,21 @@ class CiscoUmbrellaManagedOrgParser(ApiParser):
                 error_code = str(e.response.status_code)
                 error_str = e.response.content
 
-            logger.error(f"[{__parser__}]: _get_customers_id: Error{error_code} while trying to get IDs: {error_str}", extra={'frontend': str(self.frontend)})
-            raise CiscoUmbrellaManagedOrgAPIError("Failed to get customers' IDs")
-        return [str(customer.get("customerId")) for customer in response]
+            logger.error(f"[{__parser__}]:[_get_customers]: Error {error_code} while trying to get IDs: {error_str}", extra={'frontend': str(self.frontend)})
+            raise CiscoUmbrellaManagedOrgAPIError("Failed to get customer's IDs")
 
-    def _update_customer_token(self, customer_id):
+        available_customers = list()
+        for customer in response:
+            available_customers.append({"id": str(customer.get("customerId", "")), "name": str(customer.get("customerName", ""))})
+        logger.info(f"[{__parser__}]:[_get_customers]: Available Customers ids are {[customer['id'] for customer in available_customers]}", extra={'frontend': str(self.frontend)})
+
+        if self.cisco_umbrella_managed_org_customers_id:
+            return list(filter(lambda customer: customer['id'] in self.cisco_umbrella_managed_org_customers_id, available_customers))
+        else:
+            return available_customers
+
+
+    def _update_customer_token(self, customer_id: str) -> None:
         logger.info(f"[{__parser__}]: Getting a new authentication token for customer {customer_id}", extra={'frontend': str(self.frontend)})
 
         try:
@@ -154,7 +165,7 @@ class CiscoUmbrellaManagedOrgParser(ApiParser):
                 timeout=10,
                 auth=(self.cisco_umbrella_managed_org_api_key, self.cisco_umbrella_managed_org_secret_key),
                 additional_headers={
-                    'X-Umbrella-OrgID': str(customer_id),
+                    'X-Umbrella-OrgID': customer_id,
                     'Content-Type': 'application/x-www-form-urlencoded'
                 },
             )
@@ -176,7 +187,7 @@ class CiscoUmbrellaManagedOrgParser(ApiParser):
             self.frontend.cisco_umbrella_managed_org_customers_tokens[customer_id] = deepcopy(self.cisco_umbrella_managed_org_customers_tokens[customer_id])
             self.frontend.save(update_fields=['cisco_umbrella_managed_org_customers_tokens'])
 
-    def test(self):
+    def test(self) -> dict:
         result = []
         try:
             log_types = []
@@ -190,21 +201,18 @@ class CiscoUmbrellaManagedOrgParser(ApiParser):
                     "status": False,
                     "error": "no log type activated"
                 }
-            customer_ids_available = self._get_customers_id()
-            logger.info(f"[{__parser__}]:test: Available customers ids are {customer_ids_available}", extra={'frontend': str(self.frontend)})
+            customers = self._get_customers()
+            customer_ids_available = [customer['id'] for customer in customers]
+
             if self.cisco_umbrella_managed_org_customers_id:
-                selected_customer_ids = self.cisco_umbrella_managed_org_customers_id.split(",")
-                customer_ids = set(selected_customer_ids).intersection(set(customer_ids_available))
-                if difference := set(selected_customer_ids).difference(customer_ids_available):
+                if difference := set(self.cisco_umbrella_managed_org_customers_id).difference(customer_ids_available):
                     result.append(f"WARNING: The following customer IDs are currently not available on the account: {list(difference)}")
                     result.append(f"Available customer IDs: {customer_ids_available}")
-            else:
-                customer_ids = customer_ids_available
-            logger.info(f"[{__parser__}]:test: Selected Customers ids are {list(customer_ids)}", extra={'frontend': str(self.frontend)})
-            for customer_id in customer_ids:
-                self._update_customer_token(customer_id)
+
+            for customer in customers:
+                self._update_customer_token(customer['id'])
                 for log_type in log_types:
-                    data = self.get_logs(timezone.now()-timedelta(hours=1), timezone.now(), customer_id, log_type, limit=10)
+                    data = self.get_logs(timezone.now()-timedelta(hours=1), timezone.now(), customer['id'], log_type, limit=10)
                     result.extend(data)
 
             return {
@@ -218,7 +226,7 @@ class CiscoUmbrellaManagedOrgParser(ApiParser):
                 "error": str(e)
             }
 
-    def get_logs(self, since, to, customer_id, log_type, index=0, limit=None):
+    def get_logs(self, since: datetime, to: datetime, customer_id: str, log_type: str, index : int = 0, limit=None) -> list:
         payload = {
             'offset': index,
             'limit': limit or self.LIMIT_MAX,
@@ -231,53 +239,58 @@ class CiscoUmbrellaManagedOrgParser(ApiParser):
             self.BASE_URL + log_type,
             payload,
             additional_headers={
-                'X-Umbrella-OrgID': str(customer_id),
+                'X-Umbrella-OrgID': customer_id,
                 'Authorization': f"Bearer {self.cisco_umbrella_managed_org_customers_tokens[customer_id]['access_token']}",
             })['data']
 
-    def format_log(self, log):
+    def format_log(self, log: dict, customer: dict) -> str:
+        # related_users
         log["related_users"] = []
         for identity in log.get("identities", []):
             if identity.get("type", {}).get("type") == "directory_user" and "label" in identity:
                 log["related_users"].append(identity["label"])
+
+        # organization
+        log['organization'] = {}
+        log['organization']['id'] = customer['id']
+        log['organization']['name'] = customer['name']
+
         return json.dumps(log)
 
-    def execute(self):
+    def execute(self) -> None:
         log_types = []
         if self.cisco_umbrella_managed_org_get_dns:
             log_types.append("dns")
         if self.cisco_umbrella_managed_org_get_proxy:
             log_types.append("proxy")
 
-        customer_ids_available = self._get_customers_id()
-        logger.info(f"[{__parser__}]:execute: Available customers ids are {customer_ids_available}", extra={'frontend': str(self.frontend)})
+        customers = self._get_customers()
 
-        if self.cisco_umbrella_managed_org_customers_id:
-            customer_ids = set(self.cisco_umbrella_managed_org_customers_id).intersection(set(customer_ids_available))
-        else:
-            customer_ids = set(customer_ids_available)
+        for customer in customers:
+            if not self.cisco_umbrella_managed_org_customers_tokens.get(customer['id']) or not self.cisco_umbrella_managed_org_customers_tokens[customer['id']].get("expires_at") or not self.cisco_umbrella_managed_org_customers_tokens[customer['id']].get("access_token") or (self.cisco_umbrella_managed_org_customers_tokens[customer['id']]["expires_at"] - timedelta(seconds=10) < timezone.now()):
+                self._update_customer_token(customer['id'])
 
-        for customer_id in customer_ids:
-            if not self.cisco_umbrella_managed_org_customers_tokens.get(customer_id) or not self.cisco_umbrella_managed_org_customers_tokens[customer_id].get("expires_at") or not self.cisco_umbrella_managed_org_customers_tokens[customer_id].get("access_token") or (self.cisco_umbrella_managed_org_customers_tokens[customer_id]["expires_at"] - timedelta(seconds=10) < timezone.now()):
-                self._update_customer_token(customer_id)
             for log_type in log_types:
-                timestamp_field_name = f"app{customer_id}_{log_type}"
+                timestamp_field_name = f"app{customer['id']}_{log_type}"
                 since = self.last_collected_timestamps.get(timestamp_field_name) or (timezone.now() - timedelta(hours=1))
                 to = min(timezone.now(), since + timedelta(hours=24))
-                logger.info(f"[{__parser__}]:execute: getting {log_type} logs from {since} to {to}, for organization {customer_id}", extra={'frontend': str(self.frontend)})
+
+                logger.info(f"[{__parser__}]:execute: getting {log_type} logs from {since} to {to}, for organization {customer['id']}", extra={'frontend': str(self.frontend)})
+
                 index = 0
                 logs_count = self.LIMIT_MAX
                 while logs_count == self.LIMIT_MAX and index <= self.OFFSET_MAX:
-                    logs = self.get_logs(since, to, customer_id, log_type, index)
-                    # Downloading may take some while, so refresh token in Redis
+                    logs = self.get_logs(since, to, customer['id'], log_type, index)
                     self.update_lock()
                     logs_count = len(logs)
+
                     logger.info(f"[{__parser__}]:execute: got {logs_count} new lines", extra={'frontend': str(self.frontend)})
                     index += logs_count
+
                     logger.info(f"[{__parser__}]:execute: retrieved a total of {index} lines", extra={'frontend': str(self.frontend)})
-                    self.write_to_file([self.format_log(log) for log in logs])
-                    # Writting may take some while, so refresh token in Redis
+                    self.write_to_file([self.format_log(log, customer) for log in logs])
                     self.update_lock()
+
                 # When there are more than 15000 logs, last_api_call is the timestamp of the last log
                 if logs_count == self.LIMIT_MAX and index == self.OFFSET_MAX + self.LIMIT_MAX:
                     timestamp = logs[-1]['timestamp']/1000
@@ -287,6 +300,6 @@ class CiscoUmbrellaManagedOrgParser(ApiParser):
                 else:
                     # All logs have been recovered
                     self.last_collected_timestamps[timestamp_field_name] = to
-                logger.info(f"[{__parser__}]:execute: New current timestamp is {self.last_collected_timestamps[timestamp_field_name]} (customer {customer_id}, type {log_type})", extra={'frontend': str(self.frontend)})
+                logger.info(f"[{__parser__}]:execute: New current timestamp is {self.last_collected_timestamps[timestamp_field_name]} (customer {customer['id']}, type {log_type})", extra={'frontend': str(self.frontend)})
 
         logger.info(f"[{__parser__}]:execute: Parsing done.", extra={'frontend': str(self.frontend)})
