@@ -13,6 +13,7 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
 - [API_PARSER] [UBIKA] New collector
 ### Changed
 - [API_PARSER] [BLACKBERRY_CYLANCE] Stop collector earlier and wait for next run when rate-limited by the API
+- [API_PARSER] [CISCO_UMBRELLA_MANAGED_ORG] Add organisation id and name in output logs
 - [APPLICATIONS] [LOGOMELASTICSEARCH] Allow use of a TLS Profile instead of a simple X509 Certificate
 - [SYSTEM] [TLS_PROFILE] Reorder parameters into 2 separate sections
 ### Fixed
@@ -20,6 +21,7 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
 - [API_PARSER] [PROOFPOINT_POD] Increment the last_api_call of 1 second to avoid duplication
 - [API_PARSER] [PERCEPTION_POINT_X_RAY] Improve error message
 - [API_PARSER] [GATEWATCHER_ALERTS] Update endpoint of the API
+- [API_PARSER] [CISCO_UMBRELLA_MANAGED_ORG] Ensure all attributes always have the correct type in code
 - [API] [X509CERTIFICATE] Avoid conflicts when requesting a specific certificate
 
 
